--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 Projects/app.py
 Projects/.vscode
+Projects/sales.py
+Projects/__pycache__
+ecommerce/
+lessons/
+movies.json
+db.sqlite3
+template.html
+env/
